--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2'
 services:
   server:
     image: personal_admin.server:lastest
@@ -20,5 +20,5 @@ services:
     - MYSQL_ROOT_PASSWORD=password
     - MYSQL_DATABASE=personaladmin
     volumes:
-    - "/provision/database/structure.sql:/docker-entrypoint-initdb.d/database.sql"
-    - "/provision/database/structure.sql:/docker-entrypoint-initdb.d/fixtures.sql"
+    - "./provision/database/structure.sql:/docker-entrypoint-initdb.d/database.sql"
+    - "./provision/database/structure.sql:/docker-entrypoint-initdb.d/fixtures.sql"
